# Pharos-DTVM-Bridge

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASE_NOTES_v1.0.0.md  cli.py  foundry.toml  presentation.py  presentation_config.py  requirements.txt
.github/workflows/: ci.yml
contracts/evm/: CrossVmCounterCaller.sol
contracts/evm/interfaces/: IWasmCounter.sol
contracts/wasm-counter/: Cargo.toml
contracts/wasm-counter/src/: lib.rs
demo/: run_demo.py
docs/: agent-interface.md  architecture.md  deployment.md  release_checklist.md  repository_audit.md  reproducibility.md
engine/: __init__.py  archetypes.py  compiler.py  deployer.py  generator.py  mock_runtime.py  pipeline.py  planner.py  schema.py  spec_builder.py  template_registry.py  tracer.py  validator.py
engine/runtime/: __init__.py  base.py  mock_runtime.py  real_runtime.py
script/: DeployCounterCaller.s.sol
scripts/: check_selectors.py  deploy.py  pharos_config.py  trace_tx.py
templates/erc20/: solidity_contract.template  spec.json
templates/escrow/: abi.template  solidity_contract.template  spec.json
templates/nft/: rust_contract.template  solidity_contract.template  spec.json
templates/oracle/: solidity_contract.template  spec.json
templates/staking/: solidity_contract.template  spec.json
templates/voting/: solidity_contract.template  spec.json
test/: CrossVmCounterCaller.t.sol
tests/: test_pipeline_e2e.py  test_spec_generation.py  test_validator_selectors.py
